--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "SELECT name, salary from Employees\n",
+    "ORDER BY salary DESC\n",
+    "LIMIT 5;\n"
    ]
   },
   {
@@ -84,7 +87,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "SELECT a.author_name, SUM(b.copies_sold) as total_sold from Authors a\n",
+    "JOIN Books b ON a.book_name = b.book_name\n",
+    "GROUP BY a.author_name\n",
+    "ORDER BY total_sold DESC\n",
+    "LIMIT 3;\n"
    ]
   },
   {
@@ -104,7 +112,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "SELECT c.name, COUNT(DISTINCT o.OrderDate) as NumOrderDates FROM (SELECT c.name, o.quantity FROM Customers c \n",
+    "    JOIN Orders o ON c.orderNumber = o.OrderNumber\n",
+    "    WHERE o.quantity > 1)\n",
+    "WHERE NumOrderDates > 1"
    ]
   },
   {
@@ -141,7 +152,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "SELECT d.name, COUNT(e.ID) as EmployeeCount \n",
+    "FROM Department d \n",
+    "LEFT JOIN Employee e on d.dept_id, = e.dept_id\n",
+    "GROUP BY d.dept_id, d.name\n",
+    "ORDER BY EmployeeCount DESC, d.name"
    ]
   },
   {
@@ -170,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
